fix: remove double-scrollbar and style scrollbars on prism

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -37,6 +37,7 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  overflow: hidden;
 }
 
 *,
